--- a/files/src/app/config.json
+++ b/files/src/app/config.json
@@ -1,1 +1,16 @@
-{"version":"0.5.7","language":"EN","pathToInitial":null,"pathToDLC":null,"pathToClasses":null,"gameFolder":null,"ignoreUpdates":false,"disableDLC":false,"hideResetButton":false,"showWinRARWindow":false,"disableLimits":false,"disableEditorLabel":false,"devMode":false,"dlc":[]}
+{
+    "version": "0.5.7",
+    "language": "EN",
+    "pathToInitial": null,
+    "pathToDLC": null,
+    "pathToClasses": null,
+    "gameFolder": null,
+    "ignoreUpdates": false,
+    "disableDLC": false,
+    "hideResetButton": false,
+    "showWinRARWindow": false,
+    "disableLimits": false,
+    "disableEditorLabel": false,
+    "devMode": false,
+    "dlc": []
+}
