--- a/files/src/app/config.json
+++ b/files/src/app/config.json
@@ -1,1 +1,1 @@
-{"version":"0.6.3","lang":"EN","buildType":"prod","paths":{"initial":null,"dlc":null,"classes":null,"mods":null},"settings":{"updates":true,"limits":true,"DLC":true,"mods":true,"resetButton":false,"devMode":false},"sums":{"initial":null,"mods":{}},"modsList":{"length":0},"dlcList":[]}
+{"version":"0.6.3a","lang":"EN","buildType":"prod","paths":{"initial":null,"dlc":null,"classes":null,"mods":null},"settings":{"updates":true,"limits":true,"DLC":true,"mods":true,"resetButton":false,"devMode":false},"sums":{"initial":null,"mods":{}},"modsList":{"length":0},"dlcList":[]}
