--- a/files/package.json
+++ b/files/package.json
@@ -1,7 +1,7 @@
 {
   "name": "snowrunner-xml-editor-desktop",
   "productName": "SnowRunner XML Editor",
-  "version": "0.6.4с",
+  "version": "0.6.4d",
   "description": "Allows you to visually edit the game's XML files.",
   "repository": {
     "type": "git",
