--- a/files/webpack/main/config.json
+++ b/files/webpack/main/config.json
@@ -1,1 +1,1 @@
-{"version":"0.6.6d","lang":"EN","buildType":"prod","paths":{"initial":null,"dlc":null,"classes":null,"mods":null},"settings":{"updates":true,"limits":true,"DLC":true,"mods":true,"resetButton":false,"devMode":false,"showWhatsNew":true},"sizes":{"mods":{},"initial":null},"modsList":{"length":0},"dlcList":[],"ADV":{},"ETR":{}}
+{"version":"0.6.7","lang":null,"buildType":"prod","initial":null,"settings":{"updates":true,"limits":true,"DLC":true,"mods":true,"showWhatsNew":true},"sizes":{"mods":{},"initial":null},"dlc":[],"mods":{"length":0,"items":{}},"favorites":[]}
