--- a/files/webpack/main/config.json
+++ b/files/webpack/main/config.json
@@ -1,1 +1,1 @@
-{"version":"0.6.8","lang":null,"buildType":"prod","initial":null,"settings":{"updates":true,"limits":true,"DLC":true,"mods":true,"showWhatsNew":true,"advancedMode":false},"sizes":{"mods":{},"initial":null},"dlc":[],"mods":{"length":0,"items":{}},"favorites":[]}
+{"version":"0.6.8a","lang":null,"buildType":"prod","initial":null,"settings":{"updates":true,"limits":true,"DLC":true,"mods":true,"showWhatsNew":true,"advancedMode":false},"sizes":{"mods":{},"initial":null},"dlc":[],"mods":{"length":0,"items":{}},"favorites":[]}
