--- a/files/package.json
+++ b/files/package.json
@@ -1,7 +1,7 @@
 {
   "name": "snowrunner-xml-editor-desktop",
   "productName": "SnowRunner XML Editor",
-  "version": "0.6.8b",
+  "version": "0.7.0",
   "description": "Allows you to visually edit the game's XML files.",
   "repository": {
     "type": "git",
@@ -9,14 +9,13 @@
   },
   "main": ".webpack/main",
   "scripts": {
-    "build": "node ./build_scripts/preBuild.js && npm run package-prod && node ./build_scripts/postBuild.js x32",
-    "build-x64": "node ./build_scripts/preBuild.js && npm run package-prod-x64 && node ./build_scripts/postBuild.js x64",
+    "build": "node ./build_scripts/before.js && npm run package-prod && node ./build_scripts/after.js x32",
     "package": "electron-forge package --platform=win32 --arch=ia32",
     "package-prod": "cross-env NODE_ENV=production electron-forge package --platform=win32 --arch=ia32",
-    "package-prod-x64": "cross-env NODE_ENV=production electron-forge package --platform=win32 --arch=x64",
-    "package-x64": "electron-forge package --platform=win32 --arch=x64",
     "start": "cross-env NODE_ENV=development electron-forge start",
-    "texts": "node build_scripts/texts"
+    "lint": "eslint src/**",
+    "lint:fix": "npm run lint -- --fix",
+    "check": "tsc --project tsconfig.json --noEmit"
   },
   "keywords": [],
   "author": {
