--- a/files/webpack/main/config.json
+++ b/files/webpack/main/config.json
@@ -1,1 +1,23 @@
-{"version":"0.7.2","lang":null,"buildType":"prod","initial":null,"settings":{"updates":true,"DLC":true,"mods":true,"showWhatsNew":true,"advancedMode":false},"sizes":{"mods":{},"initial":null},"dlc":[],"mods":{"length":0,"items":{}},"favorites":[]}
+{
+	"version": "0.7.3",
+	"lang": null,
+	"buildType": "prod",
+	"initial": null,
+	"settings": {
+		"updates": true,
+		"DLC": true,
+		"mods": true,
+		"showWhatsNew": true,
+		"advancedMode": false
+	},
+	"sizes": {
+		"mods": {},
+		"initial": null
+	},
+	"dlc": [],
+	"mods": {
+		"length": 0,
+		"items": {}
+	},
+	"favorites": []
+}
