--- a/files/package.json
+++ b/files/package.json
@@ -1,7 +1,7 @@
 {
   "name": "snowrunner-xml-editor-desktop",
   "productName": "SnowRunner XML Editor",
-  "version": "0.7.3b",
+  "version": "0.7.3c",
   "description": "Allows you to visually edit the game's XML files.",
   "repository": {
     "type": "git",
@@ -30,7 +30,7 @@
     "@electron-forge/cli": "^6.1.1",
     "@electron-forge/plugin-webpack": "^6.1.1",
     "@types/memoizee": "^0.4.8",
-    "@types/react": "^18.2.7",
+    "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "@types/react-window": "^1.8.5",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
@@ -39,7 +39,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
-    "electron": "^25.0.0",
+    "electron": "^25.0.1",
     "eslint": "^8.41.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
@@ -50,21 +50,22 @@
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
-    "@ant-design/pro-components": "^2.5.2",
+    "@ant-design/pro-components": "^2.5.4",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.5.2",
     "cheerio": "^1.0.0-rc.12",
     "emr-bridge": "^1.5.0",
     "memoizee": "^0.4.15",
-    "rc-util": "^5.32.3",
+    "rc-util": "^5.32.4",
     "react": "^18.2.0",
     "react-afc": "^3.3.3",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-window": "^1.8.9"
+    "react-redux": "^8.0.7",
+    "react-window": "^1.8.9",
+    "tslib": "^2.5.2"
   }
 }
